--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,17 @@
 Flask>=0.12.0
 Flask-Script>=2.0.5
 
+# Persistence
+psycopg2>=2.7.1
+sqlalchemy>=1.1.8
+Flask-SQLAlchemy>=2.2
+Flask-Migrate>=2.0.3
+
 # Validation
 jsonschema>=2.6.0
+
+# Cryptography
+bcrypt>=3.1.3
 
 # Tests
 pytest>=3.0.6
